# BornAgain

./: CMakeLists.txt
.github/workflows/: ba-windows.yml
Core/: CMakeLists.txt
Core/Export/: ExportToPython.cpp
Core/Parametrization/: DistributionHandler.cpp  Distributions.cpp  Distributions.h  ParameterDistribution.cpp  ParameterDistribution.h  ParameterPool.cpp  RangedDistributions.cpp  RangedDistributions.h  Unit.h
Core/Particle/: ParticleDistribution.cpp
Core/SoftParticle/: FormFactorSphereLogNormalRadius.cpp
Core/StandardSamples/: ParticleDistributionsBuilder.cpp  SizeDistributionModelsBuilder.cpp  StandardSimulations.cpp
Doc/FFCatalog/: FormFactors.tex
Doc/FFCatalog/fig/Iq/: plot_fq_sphere.py
Doc/PhysicsManual/: Assemblies.tex  Instrument.tex  Macros.tex  Multilayers.tex  PhysicsManual.tex  Preface.tex  RefractiveIndex.tex  Scattering.tex  Setup.tex  Title.tex  myshowkeys.sty
Examples/python/simulation/ex03_InterferenceFunctions/: Interference2DLatticeSumOfRotated.py
Fit/: CMakeLists.txt
GUI/coregui/: CMakeLists.txt
GUI/coregui/Models/: BeamDistributionItem.cpp  BeamDistributionItem.h  DistributionItems.h  ParticleDistributionItem.cpp  TransformFromDomain.cpp
GUI/main/: CMakeLists.txt
Tests/Functional/Core/CoreSpecial/: MultiThreadPerformanceTestComponents.cpp
Tests/UnitTests/Core/5/: DistributionHandlerTest.h  ParameterDistributionTest.h
Tests/UnitTests/Core/ExportToPython/: PythonFormattingTest.cpp
Tests/UnitTests/Core/Fresnel/: DepthProbeSimulationTest.cpp  SpecularScanTest.cpp  SpecularSimulationTest.cpp
Tests/UnitTests/Core/Parameters/: DistributionHandlerTest.cpp  DistributionsTest.cpp  RangedDistributionTest.cpp  ScanResolutionTest.cpp
auto/Wrap/: libBornAgainCore.py
